@@ -1,3 +1,6 @@
+2003-01-27	blytkerchan
+	* jailtype.html: add words on pre-defined types
+
 2003-01-26	blytkerchan
 	* jail.css: define caption style
 	* jailtype.html: add words about namespaces, classes, etc. and start
